# MansionBot

./: .gitignore  CMakeLists.txt  main.cpp
include/: commands.h  database.h  heph.h  http_client.h  mansion_bot.h  timer.h  twitch.h
